added mobile responsive part

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           
 
         </div>
-      <div class=" bg-gray-100  max-w-[1250px]  flex mx-auto gap-10 ">
-          <div class=" grid grid-cols-3 gap-10  mr-10px ">
-               <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px] ">
+      <div class=" bg-gray-100  max-w-[1250px] w-full flex flex-col md:flex-row  mx-auto gap-10 ">
+          <div class=" grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3  gap-7  mr-10px ">
+               <div class="bg-white shadow-lg h-55 sm:w-80 w-full   my-10 rounded-[10px] ">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/emergency.png">
                  <button class="btn btn-square ml-13">
@@ -76,7 +76,7 @@
                </div>
                </div>
 
-               <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px]">
+               <div class="bg-white shadow-lg h-55 sm:w-80 w-full  my-10 rounded-[10px]">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/police.png">
                  <button class="btn btn-square ml-13">
@@ -99,7 +99,7 @@
                </div>
                </div>
 
-               <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px]">
+               <div class="bg-white shadow-lg h-55 sm:w-80 w-full  my-10 rounded-[10px]">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/fire-service.png">
                  <button class="btn btn-square ml-13">
@@ -122,7 +122,7 @@
                </div>
                </div>
 
-               <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px]">
+               <div class="bg-white shadow-lg h-55 sm:w-80 w-full my-10 rounded-[10px]">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/ambulance.png">
                  <button class="btn btn-square ml-13">
@@ -145,7 +145,7 @@
                </div>
                </div>
 
-               <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px]">
+               <div class="bg-white shadow-lg h-55 sm:w-80 w-full my-10 rounded-[10px]">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/emergency.png">
                  <button class="btn btn-square ml-13">
@@ -168,7 +168,7 @@
                </div>
              </div>
 
-              <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px]">
+              <div class="bg-white shadow-lg h-55 sm:w-80 w-full my-10 rounded-[10px]">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/emergency.png">
                  <button class="btn btn-square ml-13">
@@ -191,7 +191,7 @@
                </div>
               </div>
 
-              <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px]">
+              <div class="bg-white shadow-lg h-55 sm:w-80 w-full my-10 rounded-[10px]">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/emergency.png">
                  <button class="btn btn-square ml-13">
@@ -214,7 +214,7 @@
                </div>
               </div>
 
-              <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px]">
+              <div class="bg-white shadow-lg h-55 sm:w-80 w-full my-10 rounded-[10px]">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/emergency.png">
                  <button class="btn btn-square ml-13">
@@ -237,7 +237,7 @@
                </div>
               </div>
 
-            <div class="bg-white shadow-lg h-55 w-80 my-10 rounded-[10px]">
+            <div class="bg-white shadow-lg h-55 sm:w-80 w-full my-10 rounded-[10px]">
                <div class="flex items-cenetr gap-40 p-1">
                  <img class="w-10 bg-[#FFE3E2] p-1 rounded-[5px]" src="./assets/emergency.png">
                  <button class="btn btn-square ml-13">
